--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "invoice-application",
+  "name": "new-invoice-app",
   "version": "1.0.0",
-  "description": "Application to generate invoice",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/db-config/scripts/config.js && node server.js",
-    "db-init": "node src/db-config/scripts/config.js",
-    "dev": "nodemon server.js | pino-pretty -c -t HH:MM:ss.l"
+    "start": "node server.js ",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nearform/sql": "^1.3.1",
-    "ajv": "^6.10.0",
-    "env-schema": "^1.0.0",
-    "fastify": "^2.6.0",
-    "fastify-autoload": "^1.0.0",
-    "fastify-cookie": "^3.0.2",
-    "fastify-plugin": "^1.6.0",
-    "fastify-postgres": "^2.0.0",
-    "fastify-static": "^2.5.0",
-    "i": "^0.3.6",
-    "npm": "^6.13.4",
-    "path": "^0.12.7",
-    "pg": "^7.11.0",
+    "@nearform/sql": "^1.8.0",
+    "env-schema": "^3.0.1",
+    "fastify": "^3.18.0",
+    "fastify-autoload": "^3.7.1",
+    "fastify-cookie": "^5.3.1",
+    "fastify-formbody": "^5.0.0",
+    "fastify-plugin": "^3.0.0",
+    "fastify-postgres": "^3.5.0",
+    "fastify-static": "^4.2.2",
+    "knex": "^0.95.6",
+    "knex-migrate-sql-file": "^1.0.3",
+    "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
     "pg-camelcase": "0.0.3",
-    "pino-pretty": "^3.2.0",
-    "point-of-view": "^3.5.0",
-    "postgrator": "^3.10.2",
-    "pug": "^2.0.4",
-    "uuid": "^3.3.2",
+    "point-of-view": "^4.15.0",
+    "pug": "^3.0.2",
+    "uuid": "^8.3.2",
     "written-number": "^0.9.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.1"
   }
 }
